<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mad.mymoon.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_phases"
        android:name="com.mad.mymoon.ui.Phases.PhasesFragment"
        android:label="@string/title_phases"
        tools:layout="@layout/fragment_phases" />
    <fragment
        android:id="@+id/navigation_ar"
        android:name="com.mad.mymoon.ui.AR.ARFragment"
        android:label="@string/title_ar"
        tools:layout="@layout/fragment_ar" />

    <fragment
        android:id="@+id/navigation_discover"
        android:name="com.mad.mymoon.ui.Discover.DiscoverFragment"
        android:label="@string/title_discover"
        tools:layout="@layout/fragment_discover" />
    <fragment
        android:id="@+id/settingsPage"
        android:name="com.mad.mymoon.ui.settings.SettingsPage"
        android:label="SettingsPage" />
</navigation>