<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:background="@color/GreyBackground">

        <TextView
            android:id="@+id/tvEnterDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_email_details"
            android:textColor="@color/GreyTextValue"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/etvContactName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.723" />

        <Button
            android:id="@+id/btnSendEmail"
            android:layout_width="303dp"
            android:layout_height="wrap_content"
            android:background="@color/greyButton"
            android:text="@string/send"
            android:textColor="@color/GreyTextValue"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnClear"
            app:layout_constraintVertical_bias="0.072" />

        <EditText
            android:id="@+id/etvmEmailBody"
            android:layout_width="305dp"
            android:layout_height="188dp"
            android:layout_marginBottom="32dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/email_body"
            android:inputType="textMultiLine"
            android:textColor="@color/GreyTextValue"
            app:layout_constraintBottom_toTopOf="@+id/btnClear"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.943"
            android:autofillHints="" />

        <EditText
            android:id="@+id/etvContactName"
            android:layout_width="306dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="96dp"
            android:ems="10"
            android:hint="@string/contact_name"
            android:inputType="textEmailAddress"
            android:textColor="@color/GreyTextValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.514"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="" />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="302dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="464dp"
            android:background="@color/greyButton"
            android:text="@string/clear"
            android:textColor="@color/GreyTextValue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etvSubject"
            android:layout_width="304dp"
            android:layout_height="45dp"
            android:ems="10"
            android:hint="@string/subject"
            android:inputType="textPersonName"
            android:textColor="@color/GreyTextValue"
            app:layout_constraintBottom_toTopOf="@+id/etvmEmailBody"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etvContactName"
            app:layout_constraintVertical_bias="0.476"
            android:autofillHints="" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>